Change vault exec shell to sh.
In the RH realeased container image, which is ubi based the default shell is
bash. However in the non ubi based,this will be sh.
Without this, the ansible tasks will fail with
"bash": executable file not found in $PATH: on the non RH (ubi) vault
container image.
Defaulting the shell commands to sh will ensure a bit better compatibility in
different base build vault images, and would support a wider range of
vault images.

--- a/roles/vault_utils/tasks/vault_secrets_init.yaml
+++ b/roles/vault_utils/tasks/vault_secrets_init.yaml
@@ -4,7 +4,7 @@
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
     command: >
-      bash -e -c "vault secrets list | grep -e '^{{ vault_base_path }}'"
+      sh -e -c "vault secrets list | grep -e '^{{ vault_base_path }}'"
   register: secrets_enabled
   failed_when: false
 
@@ -20,7 +20,7 @@
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
     command: >
-      bash -e -c "vault auth list | grep -e '^{{ vault_hub }}'"
+      sh -e -c "vault auth list | grep -e '^{{ vault_hub }}'"
   register: kubernetes_enabled
   failed_when: false
 
@@ -51,7 +51,7 @@
   kubernetes.core.k8s_exec:
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
-    command: bash -e -c "vault write auth/{{ vault_hub }}/config token_reviewer_jwt={{ sa_token }}
+    command: sh -e -c "vault write auth/{{ vault_hub }}/config token_reviewer_jwt={{ sa_token }}
         kubernetes_host={{ vault_hub_kubernetes_host }}
         kubernetes_ca_cert=@/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
         issuer=https://kubernetes.default.svc"
@@ -62,7 +62,7 @@
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
     command: >
-      bash -e -c "echo \"path \\\"secret/data/{{ vault_global_policy }}/*\\\" {
+      sh -e -c "echo \"path \\\"secret/data/{{ vault_global_policy }}/*\\\" {
         capabilities = {{ vault_global_capabilities }} }\" > /tmp/policy-{{ vault_global_policy }}.hcl"
 
 - name: Configure VP global policy
@@ -76,7 +76,7 @@
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
     command: >
-      bash -e -c "echo \"path \\\"secret/data/{{ vault_pushsecrets_policy }}/*\\\" {
+      sh -e -c "echo \"path \\\"secret/data/{{ vault_pushsecrets_policy }}/*\\\" {
         capabilities = {{ vault_pushsecrets_capabilities }} }\" > /tmp/policy-{{ vault_pushsecrets_policy }}.hcl"
 
 - name: Add metadata path to the pushsecrets policy
@@ -84,7 +84,7 @@
       namespace: "{{ vault_ns }}"
       pod: "{{ vault_pod }}"
       command: >
-        bash -e -c "echo \"path \\\"secret/metadata/{{ vault_pushsecrets_policy }}/*\\\" {
+        sh -e -c "echo \"path \\\"secret/metadata/{{ vault_pushsecrets_policy }}/*\\\" {
           capabilities = {{ vault_pushsecrets_capabilities }} }\" >> /tmp/policy-{{ vault_pushsecrets_policy }}.hcl"
 
 - name: Configure VP pushsecrets policy
@@ -98,7 +98,7 @@
     namespace: "{{ vault_ns }}"
     pod: "{{ vault_pod }}"
     command: >
-      bash -e -c "echo \"path \\\"secret/data/{{ vault_hub }}/*\\\" {
+      sh -e -c "echo \"path \\\"secret/data/{{ vault_hub }}/*\\\" {
         capabilities = {{ vault_hub_capabilities }} }\" > /tmp/policy-{{ vault_hub }}.hcl"
 
 - name: Configure policy for hub
